# zk-vote

./: .gitignore  env.example
.github/workflows/: deploy.yml
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  README.md  VoteInboxContract.json  VoteRepoContract.json
