[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v3.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-sol-types = "0.8.15"
alloy-primitives = "0.8.15"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }