[package]
name = "script"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v5.0.0" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.16.1" }
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.94"
log = "0.4.21"
hex = "0.4.3"
dialoguer = "0.11.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-sol-types = "0.8.15"
alloy-primitives = "0.8.15"
rand = "0.8"
rpassword = "7.3.1"
dotenv = "0.15.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }